logs/9_clangTidyResult.log
make: Entering directory '/tmp/tmp8749kh0k/student/build'
make[1]: Entering directory '/tmp/tmp8749kh0k/student/build'
make[2]: Entering directory '/tmp/tmp8749kh0k/student/build'
make[3]: Entering directory '/tmp/tmp8749kh0k/student/build'
make[3]: Leaving directory '/tmp/tmp8749kh0k/student/build'
make[3]: Entering directory '/tmp/tmp8749kh0k/student/build'
[ 25%] Building CXX object CMakeFiles/zad10PtrCStringVector.dir/PtrCStringVector.cpp.o
[ 50%] Building CXX object CMakeFiles/zad10PtrCStringVector.dir/main.cpp.o
/tmp/tmp8749kh0k/student/main.cpp: In function ‘void validateStudentsInfo()’:
/tmp/tmp8749kh0k/student/main.cpp:49:48: error: static assertion failed: You must input your first name!
   49 |     static_assert(compileTimeStrlen(FIRSTNAME) > 2, "You must input your first name!");
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/tmp/tmp8749kh0k/student/main.cpp:49:48: note: the comparison reduces to ‘(0 > 2)’
/tmp/tmp8749kh0k/student/main.cpp:50:46: error: static assertion failed: You must input your surname!
   50 |     static_assert(compileTimeStrlen(SURNAME) > 2, "You must input your surname!");
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/tmp/tmp8749kh0k/student/main.cpp:50:46: note: the comparison reduces to ‘(0 > 2)’
/tmp/tmp8749kh0k/student/main.cpp:52:46: error: static assertion failed: You must input your student book id!
   52 |     static_assert(compileTimeStrlen(BOOK_ID) > 1, "You must input your student book id!");
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/tmp/tmp8749kh0k/student/main.cpp:52:46: note: the comparison reduces to ‘(0 > 1)’
/tmp/tmp8749kh0k/student/main.cpp:55:43: error: static assertion failed: You must input your mail (preferred AGH mail)!
   55 |     static_assert(compileTimeStrlen(MAIL) > 3, "You must input your mail (preferred AGH mail)!");
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~^~~
/tmp/tmp8749kh0k/student/main.cpp:55:43: note: the comparison reduces to ‘(0 > 3)’
/tmp/tmp8749kh0k/student/main.cpp:56:38: error: non-constant condition for static assertion
   56 |     static_assert(compileTimeContains(MAIL, '@'), "Invalid mail! It should contain '@'!");
      |                   ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
/tmp/tmp8749kh0k/student/main.cpp:56:38:   in ‘constexpr’ expansion of ‘compileTimeContains(((const char*)MAIL), 64)’
/tmp/tmp8749kh0k/student/main.cpp:44:53:   in ‘constexpr’ expansion of ‘compileTimeContains((text + 1), ((int)letter))’
/tmp/tmp8749kh0k/student/main.cpp:41:17: error: array subscript value ‘1’ is outside the bounds of array type ‘const char [1]’
   41 |     if ('\n' == *text)
      |                 ^~~~~
/tmp/tmp8749kh0k/student/main.cpp:57:38: error: non-constant condition for static assertion
   57 |     static_assert(compileTimeContains(MAIL, '.'), "Invalid mail! It should contain '.'!");
      |                   ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
/tmp/tmp8749kh0k/student/main.cpp:57:38:   in ‘constexpr’ expansion of ‘compileTimeContains(((const char*)MAIL), 46)’
/tmp/tmp8749kh0k/student/main.cpp:44:53:   in ‘constexpr’ expansion of ‘compileTimeContains((text + 1), ((int)letter))’
/tmp/tmp8749kh0k/student/main.cpp:41:17: error: array subscript value ‘1’ is outside the bounds of array type ‘const char [1]’
   41 |     if ('\n' == *text)
      |                 ^~~~~
make[3]: *** [CMakeFiles/zad10PtrCStringVector.dir/build.make:90: CMakeFiles/zad10PtrCStringVector.dir/main.cpp.o] Error 1
make[3]: Leaving directory '/tmp/tmp8749kh0k/student/build'
make[2]: *** [CMakeFiles/Makefile2:167: CMakeFiles/zad10PtrCStringVector.dir/all] Error 2
make[2]: Leaving directory '/tmp/tmp8749kh0k/student/build'
make[1]: *** [CMakeFiles/Makefile2:408: CMakeFiles/clang_tidy.dir/rule] Error 2
make[1]: Leaving directory '/tmp/tmp8749kh0k/student/build'
make: *** [Makefile:286: clang_tidy] Error 2
make: Leaving directory '/tmp/tmp8749kh0k/student/build'
